# deepseek-contract-lifecycle-management

./: Hackathon_Team_Guide.md  README.md  app.py  contract_processor.py  custom_deepseek.py  models.py  parsed_content.json  pdf_parser.py  pyproject.toml  requirements.txt  streamlit_UI.py  test_deepseek.py
agents/: contract_processor.py
components/charts/: category_chart.py  confidence_chart.py  timeline_chart.py
components/displays/: clause_display.py  contract_overview.py
sample_contracts/: structured_output_example.json
utils/: helpers.py  pdf_parser.py  prompts.py
